<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/take_photo_btn"
        android:text="@string/take_photo"
        style="@style/pickerDialogButtonStyle"/>

    <Button
        android:id="@+id/pick_photo_btn"
        android:text="@string/pick_photo"
        style="@style/pickerDialogButtonStyle"/>

    <Button
        android:id="@+id/record_video_btn"
        android:text="@string/record_video"
        style="@style/pickerDialogButtonStyle"/>

    <Button
        android:id="@+id/pick_video_btn"
        android:text="@string/pick_video"
        style="@style/pickerDialogButtonStyle"/>

</LinearLayout>