<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="pin" type="com.ang.acb.personalpins.data.entity.Pin" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <VideoView
            android:id="@+id/pin_details_video_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="W,2:2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:toggleVisibility="@{pin.videoUri != null}"/>

        <ImageView
            android:id="@+id/pin_details_video_play_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/video_play_button"
            android:src="@drawable/ic_play_circle_outline"
            app:layout_constraintStart_toStartOf="@id/pin_details_video_view"
            app:layout_constraintEnd_toEndOf="@id/pin_details_video_view"
            app:layout_constraintTop_toTopOf="@id/pin_details_video_view"
            app:layout_constraintBottom_toBottomOf="@id/pin_details_video_view"
            app:toggleVisibility="@{pin.videoUri != null}"/>

        <ImageView
            android:id="@+id/pin_details_photo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="W,2:2"
            android:contentDescription="@string/pin_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:toggleVisibility="@{pin.photoUri != null}"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="pin_details_video_view,pin_details_photo" />

        <TextView
            android:id="@+id/pin_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:paddingBottom="8dp"
            android:text="@{@string/pin_title(pin.title)}"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:toggleVisibility="@{pin.title != null}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            tools:text="@tools:sample/lorem"/>

        <TextView
            android:id="@+id/new_tag_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/new_tag"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pin_details_title"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_tag_tv"/>

        <TextView
            android:id="@+id/new_comment_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/new_comment"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_tags"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_comment_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
